tests/ui/rfcs/rfc-2008-non-exhaustive/uninhabited/patterns_same_crate.stderr
error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:52:9
   |
LL |         Some(_x) => (),
   |         ^^^^^^^^ matches no values because `UninhabitedEnum` is uninhabited
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types
note: the lint level is defined here
  --> $DIR/patterns_same_crate.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:57:9
   |
LL |         Some(_x) => (),
   |         ^^^^^^^^ matches no values because `UninhabitedVariants` is uninhabited
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:61:15
   |
LL |     while let PartiallyInhabitedVariants::Struct { x } = partially_inhabited_variant() {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ matches no values because `!` is uninhabited
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:65:15
   |
LL |     while let Some(_x) = uninhabited_struct() {
   |               ^^^^^^^^ matches no values because `UninhabitedStruct` is uninhabited
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/patterns_same_crate.rs:68:15
   |
LL |     while let Some(_x) = uninhabited_tuple_struct() {
   |               ^^^^^^^^ matches no values because `UninhabitedTupleStruct` is uninhabited
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: aborting due to 5 previous errors

